src/components/elements/button/Button.module.scss
$buttonColor: #3769c7;

.container {
    background: linear-gradient(to top, transparentize($buttonColor, 0.8), transparentize($buttonColor, 1), transparentize($buttonColor, 0.8));
    color: $buttonColor;
    border: transparentize($buttonColor, 0.5) solid 2px;
    font-size: 20px;
    white-space: nowrap;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
    cursor: pointer;
    transition: all 0.3s ease-in-out;
    padding: 0 10px;
    margin: 5px 10px;

    &:hover:not(.disabled) {
        opacity: 0.8;
    }
}

.small {
    width: 130px;
    height: 30px;
    border-radius: 12px;
}

.medium {
    width: 250px;
    height: 30px;
    border-radius: 12px;
}

.large {
    width: 100%;
    height: 50px;
    border-radius: 25px;
}

.stretchable {
    min-width: fit-content;
}

.primary {
    background-color: $buttonColor;
    color: #fff;
    border-color: none;
}

.disabled {
    filter: grayscale(0.5)
}

